<?xml version="1.0"?>
<package format="2">
  <name>skku_robotics_homework</name>
  <version>0.1.0</version>
  <description>The skku_robotics_homework package</description>

  <maintainer email="choijunhyeon@g.skku.edu">cjh</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv2</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>uvbot_msgs</exec_depend>

</package>